# home-info-display

./: .gitignore  Cargo.toml  LICENSE  README.md  config
data/: cal.txt
src/: data.rs  graphics.rs  main.rs  networking.rs
