[package]
name = "home-info-display"
version = "0.1.0"
authors = ["rschwalk <rschwalk@rschwalk.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"

[dependencies.reqwest]
version = "0.10"
features = ["blocking", "json"]

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf", "image"]
